add parseCSV in Tab1

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                         <button id="downloadCategoryChartBtn">下載雷達圖</button>
                         <button id="downloadCategoryCSVBtn">下載CSV資料</button>
                         <button id="resetCategoryFormBtn">重置</button>
-                        <input type="file" id="wordFile" accept=".docx" style="display: none;">
-                        <button id="parseWordBtn">解析Word</button>
+                        <input type="file" id="categoryFile" accept=".docx,.csv" style="display: none;">
+                        <button id="parseCategoryFileBtn">從檔案解析</button>
                     </div>
                 </div>
                 <div class="flex-item">
